# xquo

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.devcontainer/cli/.devcontainer/: devcontainer.json
.github/workflows/: cleanup.yml  release.yml  test.yml
scripts/: release.sh
src/: bulk.rs  lib.rs  main.rs  quote.rs
tests/: cli.rs
