[package]
name = "xquo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "Quote null splited lines for Bash command line"
repository = "https://github.com/hankei6km/xquo"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "bash", "text", "utility"]
exclude = ["/.devcontainer/", "/.gitignore", "/.github/", "/.vscode/"]

[features]
default = []
jemalloc = ["tikv-jemallocator"]

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
atty = "0.2"
tikv-jemallocator = { version = "0.5", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
