[package]
name = "xquo"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["hankei6km <hankei6km@gmail.com>"]
license = "MIT"
description = "Quote null splited lines for Bash command line"
repository = "https://github.com/hankei6km/xquo"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "bash", "text", "utility"]
exclude = [
    "/.devcontainer/",
    "/.gitignore",
    "/.github/",
    "/.vscode/",
    "/scripts/",
]

[features]
default = []
jemalloc = ["tikv-jemallocator"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
tikv-jemallocator = { version = "0.5", optional = true }
is-terminal = "0.4.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
